@@ -94,3 +94,5 @@ bool Path::operator==(const Path& src) const
 */
 
 } //namespace Cairo
+
+// vim: ts=2 sw=2 et
