@@ -207,7 +207,6 @@ RadialGradient::~RadialGradient()
 }
 
 
-
-
-
 } //namespace Cairo
+
+// vim: ts=2 sw=2 et
