@@ -536,3 +536,5 @@ public:
 } // namespace Cairo
 
 #endif //__CAIROMM_SURFACE_H
+
+// vim: ts=2 sw=2 et
